Use PyTorch dataset instead of keras

--- a/Offnet.ipynb
+++ b/Offnet.ipynb
@@ -49,17 +49,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import keras"
+    "import torch"
    ]
   },
   {
@@ -68,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import torchvision.datasets"
    ]
   },
   {
@@ -97,25 +89,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = \"fashion-mnist\""
+    "!mkdir -p models"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_config = {\n",
-    "    'size': 32,\n",
-    "    'channels': 1,\n",
-    "    'classes': 10\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +115,7 @@
        "              )\n",
        "              (conv): Conv2d(144, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -155,6 +135,7 @@
        "              )\n",
        "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -173,6 +154,7 @@
        "              )\n",
        "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -191,6 +173,7 @@
        "              )\n",
        "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -209,6 +192,7 @@
        "              )\n",
        "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -227,6 +211,7 @@
        "              )\n",
        "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -245,6 +230,7 @@
        "              )\n",
        "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -263,6 +249,7 @@
        "              )\n",
        "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -285,6 +272,7 @@
        "              )\n",
        "              (conv): Conv2d(1440, 320, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -304,6 +292,7 @@
        "              )\n",
        "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -322,6 +311,7 @@
        "              )\n",
        "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -340,6 +330,7 @@
        "              )\n",
        "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -358,6 +349,7 @@
        "              )\n",
        "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -376,6 +368,7 @@
        "              )\n",
        "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -394,6 +387,7 @@
        "              )\n",
        "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -412,6 +406,7 @@
        "              )\n",
        "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -434,6 +429,7 @@
        "              )\n",
        "              (conv): Conv2d(2880, 640, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -453,6 +449,7 @@
        "              )\n",
        "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -471,6 +468,7 @@
        "              )\n",
        "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -489,6 +487,7 @@
        "              )\n",
        "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -507,6 +506,7 @@
        "              )\n",
        "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -525,6 +525,7 @@
        "              )\n",
        "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -543,6 +544,7 @@
        "              )\n",
        "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -561,6 +563,7 @@
        "              )\n",
        "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
+       "            (dropout): Dropout(p=0.5)\n",
        "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu2): ReLU(inplace)\n",
        "            (conv2): FakeConv2d(\n",
@@ -582,42 +585,51 @@
        ")"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def error_rate(net, x=None, y=None, test_batch_size = 16):\n",
-    "    number_of_test_images = x_test.shape[0]\n",
-    "    number_of_error_images = 0\n",
-    "    for start in range(0, number_of_test_images, test_batch_size):\n",
-    "        end = min(start + test_batch_size, number_of_test_images)\n",
-    "        number_of_error_images += int((net.predict(x_test[start:end]) != y_test[start:end]).sum())\n",
-    "    return number_of_error_images / number_of_test_images\n",
-    "\n",
     "net = skorch.NeuralNetClassifier(\n",
     "    module=model.Offnet(\n",
-    "        dataset,\n",
-    "        dataset_config['size'],\n",
-    "        dataset_config['channels'],\n",
-    "        dataset_config['classes'],\n",
+    "        \"fashion-mnist\",\n",
+    "        input_size=32,\n",
+    "        in_channels=1,\n",
+    "        classes=10,\n",
     "        total_block_number=24,\n",
     "        widen_factor=10,\n",
     "    ),\n",
     "    criterion=torch.nn.CrossEntropyLoss,\n",
-    "    batch_size=16,\n",
+    "    batch_size=20,\n",
     "    max_epochs=10,\n",
-    "    optimizer=torch.optim.Adam,\n",
+    "    optimizer=lambda params, lr: torch.optim.SGD(params, lr=lr, momentum=0.9, nesterov=True),\n",
     "    callbacks=[\n",
+    "        ('learning_rate_decay',\n",
+    "         skorch.callbacks.LRScheduler(\n",
+    "             policy=torch.optim.lr_scheduler.MultiStepLR,\n",
+    "             monitor=None,\n",
+    "             gamma=0.1,\n",
+    "             milestones=(150, 225)\n",
+    "         )\n",
+    "        ),\n",
     "        ('progress_bar', skorch.callbacks.ProgressBar()),\n",
-    "        ('checkpoint', skorch.callbacks.Checkpoint(target=\"models/offnet.pt\", monitor=None))\n",
+    "        ('checkpoint', skorch.callbacks.Checkpoint(target=\"models/{net.module.name}.pt\", monitor=None))\n",
     "    ],\n",
     "    device='cuda' if torch.cuda.is_available() else 'cpu',\n",
-    "    #train_split=None, # Workaround for https://github.com/dnouri/skorch/issues/218\n",
-    "    lr=1e-04,\n",
+    "    lr=0.1,\n",
+    "    train_split=skorch.dataset.CVSplit(5, stratified=False),\n",
     ")\n",
     "net.initialize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import RandomErasing.transforms"
    ]
   },
   {
@@ -626,58 +638,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process(images):\n",
-    "    pad_images = np.pad(images, ((0, 0), (2, 2), (2, 2)), 'constant')\n",
-    "    number_of_images, height, width = pad_images.shape\n",
-    "    return pad_images.reshape(number_of_images, 1, height, width).astype(np.float32)  / 255.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(x_train_bytes, y_train_bytes), (x_test_bytes, y_test_bytes) = keras.datasets.fashion_mnist.load_data()\n",
-    "x_train = process(x_train_bytes)\n",
-    "x_test = process(x_test_bytes)\n",
-    "y_train = y_train_bytes.astype(np.int64)\n",
-    "y_test = y_test_bytes.astype(np.int64)"
+    "train_dataset = torchvision.datasets.FashionMNIST(\n",
+    "    \"~/torchvision/datasets/FashionMNIST\",\n",
+    "    download=True,\n",
+    "    train=True,\n",
+    "    transform=torchvision.transforms.Compose([\n",
+    "        torchvision.transforms.RandomCrop(32, padding=4),\n",
+    "        torchvision.transforms.RandomHorizontalFlip(),\n",
+    "        torchvision.transforms.ToTensor(),\n",
+    "        torchvision.transforms.Normalize((0.1307,), (0.3081,)),\n",
+    "        RandomErasing.transforms.RandomErasing(mean=[0.4914]),\n",
+    "    ])\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def error_rate(test_batch_size = 16):\n",
-    "    number_of_test_images = x_test.shape[0]\n",
-    "    number_of_error_images = 0\n",
-    "    for start in range(0, number_of_test_images, test_batch_size):\n",
-    "        end = min(start + test_batch_size, number_of_test_images)\n",
-    "        number_of_error_images += int((net.predict(x_test[start:end]) != y_test[start:end]).sum())\n",
-    "    return number_of_error_images / number_of_test_images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffb07e91663343fbbc53a3314ebbbc95",
+       "model_id": "637a619c1e6a4073acb1dbc5c6faaf06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -687,39 +670,10 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Checkpoint! Saving model to models/untrainable_wrn1.pt.\n",
-      "  epoch    train_loss    valid_acc    valid_loss        dur\n",
-      "-------  ------------  -----------  ------------  ---------\n",
-      "      1        \u001b[36m0.4681\u001b[0m       \u001b[32m0.8920\u001b[0m        \u001b[35m0.3074\u001b[0m  1343.9497\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f841f169cda45a4b3fbe7a3f79d69f2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=3750), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "for _ in range(200):\n",
-    "    net.fit_loop(x_train, y_train)\n",
-    "    prediction_test = net.predict(x_test)\n",
-    "    error = (prediction_test != y_test).mean()\n",
-    "    print(\"error: \", error_rate())"
+    "net.fit(train_dataset, None, epochs=300)"
    ]
   },
   {
@@ -727,7 +681,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# net.fit_loop(train_dataset, None, epochs=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dataset = torchvision.datasets.FashionMNIST(\n",
+    "    \"~/torchvision/datasets/FashionMNIST\",\n",
+    "    download=True,\n",
+    "    train=False,\n",
+    "    transform=torchvision.transforms.Compose([\n",
+    "        torchvision.transforms.Pad(2),\n",
+    "        torchvision.transforms.ToTensor(),\n",
+    "        torchvision.transforms.Normalize((0.1307,), (0.3081,)),\n",
+    "    ])\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
