--- a/Offnet.ipynb
+++ b/Offnet.ipynb
@@ -29,6 +29,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%aimport skorchsaver"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -614,7 +623,9 @@
     "         )\n",
     "        ),\n",
     "        ('progress_bar', skorch.callbacks.ProgressBar()),\n",
-    "        ('checkpoint', skorch.callbacks.Checkpoint(target=\"models/{net.module.name}.pt\", monitor=None))\n",
+    "        ('checkpoint', skorch.callbacks.Checkpoint(target=\"models/{net.module.name}.model.pt\", monitor=None)),\n",
+    "        ('optimizer_saver', skorchsaver.OptimizerSaver(target=\"models/{net.module.name}.optimizer.pt\")),\n",
+    "        ('history_saver', skorchsaver.HistorySaver(target=\"models/{net.module.name}.history.json\")),\n",
     "    ],\n",
     "    device='cuda' if torch.cuda.is_available() else 'cpu',\n",
     "    lr=0.1,\n",
@@ -701,6 +712,15 @@
     "        torchvision.transforms.Normalize((0.1307,), (0.3081,)),\n",
     "    ])\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net.save_history('models/{net.module.name}.history.json'.format(net=net))"
    ]
   }
  ],
