--- a/Offnet-WarmRestart.ipynb
+++ b/Offnet-WarmRestart.ipynb
@@ -122,9 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -194,82 +192,6 @@
        "            )\n",
        "          )\n",
        "          (3): OffBlock(\n",
-       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (4): OffBlock(\n",
-       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (5): OffBlock(\n",
-       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (6): OffBlock(\n",
-       "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(160, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(1440, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (7): OffBlock(\n",
        "            (bn1): BatchNorm2d(160, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "            (relu1): ReLU(inplace)\n",
        "            (conv1): FakeConv2d(\n",
@@ -369,82 +291,6 @@
        "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
        "          )\n",
-       "          (4): OffBlock(\n",
-       "            (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (5): OffBlock(\n",
-       "            (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (6): OffBlock(\n",
-       "            (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (7): OffBlock(\n",
-       "            (bn1): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(320, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(320, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(2880, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
        "        )\n",
        "      )\n",
        "      (3): OffBlockGroup(\n",
@@ -526,82 +372,6 @@
        "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "            )\n",
        "          )\n",
-       "          (4): OffBlock(\n",
-       "            (bn1): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(640, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(640, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (5): OffBlock(\n",
-       "            (bn1): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(640, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(640, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (6): OffBlock(\n",
-       "            (bn1): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(640, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(640, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (7): OffBlock(\n",
-       "            (bn1): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu1): ReLU(inplace)\n",
-       "            (conv1): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(640, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "            (dropout): Dropout(p=0.5)\n",
-       "            (bn2): BatchNorm2d(640, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "            (relu2): ReLU(inplace)\n",
-       "            (conv2): FakeConv2d(\n",
-       "              (deform): Deform2d(\n",
-       "                (conv): Conv2d(640, 18, kernel_size=(1, 1), stride=(1, 1))\n",
-       "              )\n",
-       "              (conv): Conv2d(5760, 640, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "            )\n",
-       "          )\n",
        "        )\n",
        "      )\n",
        "      (4): AvgPool2d(kernel_size=8, stride=8, padding=0)\n",
@@ -626,15 +396,21 @@
     "        input_size=32,\n",
     "        in_channels=1,\n",
     "        classes=10,\n",
-    "        total_block_number=24,\n",
+    "        total_block_number=12,\n",
     "        widen_factor=10,\n",
     "    ),\n",
     "    criterion=torch.nn.CrossEntropyLoss,\n",
-    "    batch_size=20,\n",
+    "    batch_size=40,\n",
     "    max_epochs=10,\n",
     "    optimizer=lambda params, lr: torch.optim.SGD(params, lr=lr, momentum=0.9, nesterov=True),\n",
     "    callbacks=[\n",
-    "        ('learning_rate_decay', skorch.callbacks.LRScheduler()),\n",
+    "        ('learning_rate_decay', skorch.callbacks.LRScheduler(\n",
+    "            policy=skorch.callbacks.WarmRestartLR,\n",
+    "            min_lr=0,\n",
+    "            max_lr=0.005,\n",
+    "            base_period=10,\n",
+    "            period_mult=2,\n",
+    "        )),\n",
     "        ('progress_bar', skorch.callbacks.ProgressBar()),\n",
     "        ('checkpoint', skorch.callbacks.Checkpoint(target=\"models/{net.module.name}.WarmRestart.model.pt\", monitor=None)),\n",
     "        ('optimizer_saver', skorchsaver.OptimizerSaver(target=\"models/{net.module.name}.WarmRestart.optimizer.pt\")),\n",
@@ -678,14 +454,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c16b2429db904ba5ba15f347b0e7eba1",
+       "model_id": "1ca245234918458e839d0105ede3ee47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -695,127 +469,10 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Checkpoint! Saving model to models/Offnet-28-10-fashion-mnist-32x32x1.model.pt.\n",
-      "  epoch    train_loss    valid_acc    valid_loss        dur\n",
-      "-------  ------------  -----------  ------------  ---------\n",
-      "      1        \u001b[36m0.7652\u001b[0m       \u001b[32m0.3004\u001b[0m        \u001b[35m4.0179\u001b[0m  1600.8352\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a102dd2402984037b702a06e2c590af7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=3500), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Checkpoint! Saving model to models/Offnet-28-10-fashion-mnist-32x32x1.model.pt.\n",
-      "      2        \u001b[36m0.4803\u001b[0m       \u001b[32m0.5847\u001b[0m        \u001b[35m1.6770\u001b[0m  1617.4070\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8db00a1441c548269bfec4a8b7d1dfd4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=3500), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Checkpoint! Saving model to models/Offnet-28-10-fashion-mnist-32x32x1.model.pt.\n",
-      "      3        \u001b[36m0.4044\u001b[0m       0.4940        2.4284  1623.9960\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a667936eced4a2890438888406d4bef",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=3500), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Checkpoint! Saving model to models/Offnet-28-10-fashion-mnist-32x32x1.model.pt.\n",
-      "      4        \u001b[36m0.3565\u001b[0m       \u001b[32m0.7187\u001b[0m        \u001b[35m1.0015\u001b[0m  1627.3563\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60b03ab1cdff49838a43869bc4e3f51b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=3500), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Checkpoint! Saving model to models/Offnet-28-10-fashion-mnist-32x32x1.model.pt.\n",
-      "      5        \u001b[36m0.3186\u001b[0m       0.2729        6.1593  1635.7181\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f47267d0cc0347d3ab91cf68030b9693",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=3500), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "net.fit(train_dataset, None, epochs=50)"
+    "net.fit(train_dataset, None, epochs=320)"
    ]
   },
   {
